<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="horizontal"
    tools:layout_editor_absoluteX="160dp"
    tools:layout_editor_absoluteY="164dp">

    <EditText
        android:id="@+id/years_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/repetition_years"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="textEnd" />

    <EditText
        android:id="@+id/months_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/repetition_months"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="textEnd" />

    <EditText
        android:id="@+id/days_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/repetition_days"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="textEnd" />

</LinearLayout>