<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="todoListViewModel"
            type="com.piratmac.todo.view_models.TodoListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="1dp"
        android:maxWidth="100000dp">


        <LinearLayout
            android:id="@+id/linearLayout"
            style="?android:attr/buttonBarStyle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tasksList">

            <Button
                android:id="@+id/delete_done_tasks"
                style="@style/Buttons.NegativeAction"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/task_delete" />

            <ImageButton
                android:id="@+id/settings"
                style="@style/Buttons.PositiveAction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/settings"
                app:srcCompat="@drawable/ic_settings" />

            <Button
                android:id="@+id/add_new"
                style="@style/Buttons.PositiveAction"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/task_add_new" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tasksList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="207dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
