<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--
    <ImageButton
        android:id="@+id/refresh_widget"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="12dp"
        android:layout_toStartOf="@+id/open_fullscreen"
        android:background="@android:color/transparent"
        android:contentDescription="@string/widget_refresh"
        android:elevation="10dp"
        android:src="@drawable/ic_recurrence_on" />
        -->

    <ImageButton
        android:id="@+id/delete_done_tasks"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/task_delete"
        android:elevation="10dp"
        android:src="@drawable/ic_delete" />

    <ImageButton
        android:id="@+id/open_fullscreen"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/open_fullscreen"
        android:elevation="10dp"
        android:src="@drawable/ic_fullscreen" />

    <Button
        android:id="@+id/add_task"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:alpha=".65"
        android:background="@android:color/black"
        android:elevation="5dp"
        android:text="@string/task_add_new"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha=".6"
        android:background="@android:color/black"
        android:orientation="vertical">


        <ListView
            android:id="@+id/todoList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="40dp"
            android:layout_weight="1"
            android:elevation="10dp"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp">

        </ListView>

    </LinearLayout>


</RelativeLayout>